# ai-model-stress-tester

./: .gitignore  CONTRIBUTING.md  LICENSE  README.dev.md  README.md  benchmark.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: GITHUB_REPO.md
scripts/: benchmark_models.py  compare_targets.py  explain_features.py  generate_failure_chart.py  lstm_baseline.py  predict.py  refresh_readme_metrics.py  regime_report.py  sequence_baseline.py  serve.py  walk_forward_report.py
src/: 1_get_real_data.py  2_explore_data.py  3_feature_engineering.py  4_train_model.py  configs.json
src/pipeline/: __init__.py  config.py  explain.py  features.py  inference.py  models.py  paths.py  regime.py  reports.py  training.py  validation.py
tests/: conftest.py  test_config.py  test_features.py  test_ingestion.py  test_lstm_baseline.py  test_smoke.py  test_training.py  test_validation.py
